--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "express": "^5.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
